# dj-music-plugin

./: .dockerignore  .env.example  .gitignore  .importlinter  .mcp.json  .version-bump.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  DJ-MUSIC.md  Dockerfile  GEMINI.md  Makefile  README.md  REQUIREMENTS.md  alembic.ini  conftest.py  fastmcp.json  fly.toml  gemini-extension.json  mcp-test-results-v8.md  mcp-test-results.md  opencode.json  package.json  pyproject.toml  pyrightconfig.json  serve_http.py  server.py  start.sh  test_mcp_stdio.py  test_validation_error.py
.agents/plugins/: marketplace.json
.antigravity-plugin/: plugin.json
.claude/: dj-music.local.md.example  launch.json  settings.json  ssh-config.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: bg-jobs-manager.md  bg-jobs-watcher.md  panel-doctor.md  ym-api-specialist.md
.claude/hooks/: session-start.sh  start-servers.sh
.claude/rules/: audio.md  bootstrap.md  config.md  dependencies.md  dj-set-building.md  entities.md  git.md  gotchas.md  llm-sampling.md  logging.md  models.md  optimization.md  panel.md  prompts.md  providers.md  repositories.md  resources.md  rest-api.md  sandbox.md  services.md  suno.md  supabase.md  tests.md  tools.md  transitions.md  workflows.md  ym.md
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.cursor-plugin/hooks/: hooks-cursor.json  session-start.sh
.factory/: policy.toml
.firecrawl/: lyria3-full-guide.md  producer-ai-home.md  producer-ai-map.json  producer-blog.md  producer-docs-intro.md  producer-docs-main.md  search-dj-ga-research.json  search-dj-sequencing.json  search-lyria3-tips.json  search-lyria3.json  search-producer-ai-docs.json  search-producer-ai-tips.json  search-producer-reddit.json  search-riffusion-tips.json
.githooks/: pre-push
.github/: BRANCH_STRATEGY.md  pull_request_template.md
.github/workflows/: ci.yml
.kimi-plugin/: plugin.json
.opencode/: INSTALL.md  fastmcp-findings.md  gitnexus-opencode.json
.opencode/agents/: bg-jobs-manager.md  bg-jobs-watcher.md  dj-music.md  ym-api-specialist.md
.opencode/commands/: audit-library.md  build-set.md  check.md  format.md  render-mix.md  sync-playlist.md  test.md
.opencode/plugins/: dj-music.ts.backup  gitnexus-opencode.js  superpowers.js
.pi/extensions/: dj-music.json  dj-music.ts
.workers/: dj-music-001.json
agents/: dj-assistant.md
app/: __init__.py  _version.py  config.py  middleware.py  server.py  telemetry.py
app/api/: __init__.py  audio_proxy.py  lifespan.py  openapi.py  schemas.py  server.py  signed_url_cache.py  state.py  tool_registry.py
app/audio/: __init__.py  level_config.py  mood.py  pipeline.py  registry.py  temp_download.py  timeseries.py
app/audit/: __init__.py  rules.py
app/bootstrap/: __init__.py  lifespans.py  middleware.py  observability.py  sampling.py  server_builder.py  transforms.py  visibility.py
app/camelot/: wheel.py
app/config/: __init__.py  audio.py  audit.py  beatport.py  database.py  delivery.py  discovery.py  mcp.py  optimization.py  render.py  suno.py  supabase.py  transition.py
app/controllers/: __init__.py  dependencies.py  elicitation.py  middleware.py
app/core/: cache.py  camelot.py  constants.py  elicitation.py  entity_resolver.py  errors.py  logging_config.py  pagination.py  parsing.py  schemas.py  seed.py  storage.py  track_features.py  transition_intent.py
app/db/: __init__.py  seed.py  session.py
commands/: build-set.md  curate-library.md  deliver-set.md  expand-playlist.md  help.md  panel-setup.md  panel.md  reload-plugin.md  ym-sync.md
docs/: BACKGROUND_TASKS_IMPLEMENTATION.md  agent-prompts.md  architecture.md  audio-pipeline.md  audio-schema.md  background-tasks.md  codex-plugin.md  dev-mode.md  di-patterns.md  domain-glossary.md  elicitation-guide.md  fastmcp-alignment-report.md  lifespan-guide.md  middleware-implementation.md  panel-guide.md  plugin-settings.md  refactor-v2.md  render-pipeline.md  storage-backends.md  structure.md  sync-service-api-design.md  telemetry-guide.md  tool-catalog.md  transition-scoring.md  transitions-refactor.md  vm-deployment.md  vm-l5-selectel-setup.md  ym-api-guide.md
flows/: dj_health_check.py
hooks/: bg-campaign-context.txt  dev-filewatch-reload.sh  hooks.json  pre-push  reload-mcp.sh  run-hook.cmd  session-start
migrations/: 2026-05-06_neural_mix_score_columns.sql  2026-06-24_beatport_canonical_metadata.sql  2026-07-03_affinity_distinct_pair.sql  2026-07-08_enable_row_level_security.sql
panel/: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
scripts/: assemble_set_mp3.py  batch_analyze.py  benchmark_audio.py  benchmark_operations.py  best10gb_download.py  build_rekordbox_bundle.py  build_set_from_db.py  build_stems_set.py  build_usb.py  check_db_egress.sh  compat_shims.py  create_techno_playlist.py  curate_ideal.py  debug_all_tools.py  debug_tools_report.json  deploy_to_vm.sh  diag_mood_classifier.py  discogs_genre_test.py  dj_mix_render.py  dj_mix_stems.py  dj_pipeline.py  download_set_75.py  dump_anlz_cues.py  export_collection_to_rekordbox_xml.py  export_folder_to_rekordbox_xml.py  export_track_to_rekordbox_xml.py  export_usb_bundle_to_rekordbox_xml.py  fastmcp_json.py  fix_beat_on_server.sh  full_capability_demo.py  full_stems_pipeline.py  l5_set1116.py  l5_set73.py  migrate_beatgrids.py  pick_stories.py  preview-panel.sh  preview-rest-api.sh  reanalyze_beats.py  reclassify_moods.py  release.sh  (+33 more)
tests/: conftest.py  test_background_tasks.py  test_cache.py  test_di_patterns.py  test_lifespan.py  test_mcp_middleware.py  test_middleware.py  test_provider.py  test_server_builder.py  test_telemetry.py  test_telemetry_integration.py  test_version_sync.py
wiki/: Architecture.md  Audio-Analysis-Pipeline.md  Configuration-Reference.md  Contributing.md  DJ-Set-Generation.md  E2E-Pipeline.md  Getting-Started.md  Home.md  Known-Issues.md  MCP-Tools-Reference.md  Performance.md  Transition-Scoring.md  Yandex-Music-Integration.md  _Sidebar.md
(+2305 files in other folders)
