[project]
name = "dj-music-plugin"
version = "1.2.49"
description = "MCP server for DJ techno music library management"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[tasks,apps]>=3.2.4,<4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "scipy>=1.12",
    "essentia>=2.1b6.dev1389",
    # numba 0.64 + numpy 2.x segfaults inside librosa.beat.beat_track gufunc
    # (single-threaded, on first call). 0.65+ ships the fix. See docs/vm-deployment.md.
    "numba>=0.65",
    "llvmlite>=0.47",
]
stems = ["demucs>=4.0", "torch>=2.0"]
postgres = ["pgvector>=0.3"]
http = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
otel = [
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
]
sentry = ["sentry-sdk>=2.0"]
observability = [
    "sentry-sdk>=2.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "UP046",  # Generic[T] is clearer than PEP 695 type params for Pydantic
    "E402",   # Module imports not at top (tool registration pattern in server.py)
]

[tool.ruff.lint.per-file-ignores]
"app/db/migrations/**" = ["E501"]  # autogenerated migration files
"app/audio/**" = ["RUF012", "E501"]  # mutable class defaults OK for analyzer ABC pattern
"app/rest/**" = ["E501", "RUF001", "RUF002", "B008"]  # Swagger examples + multilingual docs + FastAPI defaults
"app/tools/**" = ["B008", "E501"]  # FastMCP DI: Depends() in arg defaults is correct
"app/handlers/**" = ["B008", "E501"]  # FastMCP handler conventions
"app/resources/**" = ["B008", "E501"]  # FastMCP DI: Depends() in arg defaults is correct
"app/providers/**" = ["E501"]  # long URLs and API paths
"tests/**" = ["E501", "RUF012", "B017", "N806"]  # tests can use blind pytest.raises; mock context managers use uppercase

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
# Pre-existing issues exposed by Phase 12 (serve_http.py → app/api/server.py).
# api/ is a thin transport wrapper around mcp; loosen strictness here.
exclude = ['^app/api/']

[[tool.mypy.overrides]]
module = ["librosa.*", "soundfile.*", "demucs.*", "essentia.*", "key_value.*", "sentry_sdk.*", "anthropic.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Run tests in parallel across CPU cores by default. Override with `-n 0` for
# serial execution (e.g. when debugging with pdb or inspecting per-test output).
addopts = "-n auto --dist loadfile"
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.*",
    # librosa is chatty when synthetic test signals are shorter than its
    # default n_fft window or when silence yields no detectable pitch.
    # Production audio is always long enough; these only fire on test fixtures.
    "ignore:n_fft=.*is too large for input signal of length.*:UserWarning:librosa.*",
    "ignore:Trying to estimate tuning from empty frequency set.*:UserWarning:librosa.*",
]
markers = [
    "integration: live external-service round-trips, skipped without secrets (e.g. DJ_YM_TOKEN)",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "alembic>=1.14",
    "import-linter>=2.11",
    "respx>=0.23.1",
]
